--- a/nd940-c3-advanced-android-programming-project-starter-master/starter/app/src/main/res/values/strings.xml
+++ b/nd940-c3-advanced-android-programming-project-starter-master/starter/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="choice2">LoadApp - Current repository by Udacity</string>
     <string name="choice3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
 
+    <string name="file_name">File name:</string>
+    <string name="file_status">Status:</string>
+    <string name="back">OK</string>
+
     <string name="choices0">none</string>
     <string name="choices1">glide</string>
     <string name="choices2">loadApp</string>
