--- a/nd940-android-kotlin-c4-starter-master/starter/app/src/main/res/values/strings.xml
+++ b/nd940-android-kotlin-c4-starter-master/starter/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="reminder_title">Reminder Title</string>
     <string name="reminder_desc">Description</string>
     <string name="reminder_location">Reminder Location</string>
+    <string name="reminder_coordinates">Reminder Coordinates</string>
+    //<string name="coordinates_format">Latitude: %d , Longitude: %d</string>
     <string name="save">Save</string>
     <string name="reminder_saved">Reminder Saved !</string>
     <string name="logout">Logout</string>
